add phase shift circuit

--- a/ufpgapll.ucf
+++ b/ufpgapll.ucf
@@ -25,16 +25,21 @@ NET "led<3>"  LOC="k14"   | IOSTANDARD=LVCMOS33;
 #NET "led<6>"  LOC="f4";
 #NET "led<7>"  LOC="r4";
 
-NET "btns<0>" LOC="H13"   | IOSTANDARD=LVCMOS33;
-NET "btns<1>" LOC="E18"   | IOSTANDARD=LVCMOS33;
-NET "btns<2>" LOC="D18"   | IOSTANDARD=LVCMOS33;
-NET "btns<3>" LOC="B18"   | IOSTANDARD=LVCMOS33;
+NET "btns<3>" LOC="H13"   | IOSTANDARD=LVCMOS33;
+NET "btns<2>" LOC="E18"   | IOSTANDARD=LVCMOS33;
+NET "btns<1>" LOC="D18"   | IOSTANDARD=LVCMOS33;
+NET "btns<0>" LOC="B18"   | IOSTANDARD=LVCMOS33;
 
 # JA1
 NET "fb_u" LOC="L15" | IOSTANDARD=LVCMOS33 | SLEW=SLOW | DRIVE=4;
 # JA2
-NET "vco" LOC="K12"  | IOSTANDARD=LVCMOS33;
+NET "pllout" LOC="K12"  | IOSTANDARD=LVCMOS33;
 # JA3
 NET "stio<0>" LOC="L17" | IOSTANDARD=LVCMOS33;
 # JA5
 NET "stio<1>" LOC="M15" | IOSTANDARD=LVCMOS33;
+
+NET "sw<0>" LOC="g18";
+NET "sw<1>" LOC="h18";
+NET "sw<2>" LOC="k18";
+NET "sw<3>" LOC="k17";
