Add gate driver enable pin.

--- a/ufpgapll.ucf
+++ b/ufpgapll.ucf
@@ -35,9 +35,7 @@ NET "fb_u" LOC="L15" | IOSTANDARD=LVCMOS33 | SLEW=SLOW | DRIVE=4;
 # JA2
 NET "pllout" LOC="K12"  | IOSTANDARD=LVCMOS33;
 # JA3
-NET "stio<0>" LOC="L17" | IOSTANDARD=LVCMOS33;
-# JA5
-NET "stio<1>" LOC="M15" | IOSTANDARD=LVCMOS33;
+NET "gate_enbl" LOC="L17" | IOSTANDARD=LVCMOS33;
 
 NET "sw<0>" LOC="g18";
 NET "sw<1>" LOC="h18";
